--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
+EMAIL_SERVER="smtp.gmail.com"
+EMAIL_PORT=587
+EMAIL_USER="noreply@dreametrix.com"
+EMAIL_PASSWORD="hvre ydpz qhzc flas"
+EMAIL_FROM="noreply@dreametrix.com"
+# NODE_ENV = 'development'
+NODE_ENV = 'production'
+
 # Database
 DATABASE_URL="mysql://admin:jemasa%40hb@157.230.112.193:3306/radiantprepdb"
 
