--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,6 @@ SESSION_SECRET="your-super-secret-session-key-here"
 # Next.js
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="your-nextauth-secret"
+
+# Prisma
+PRISMA_ENGINE_DOWNLOAD_TIMEOUT=120000
