Fix Prisma client generation error

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start", 
     "postinstall": "npm run prisma:generate || echo 'Prisma generation failed, using fallback'",
-    "prisma:generate": "prisma generate --skip-generate || echo 'Using fallback Prisma client'",
+    "prisma:generate": "prisma generate || echo 'Using fallback Prisma client'",
     "lint": "next lint"
   },
   "dependencies": {
