Fix Prisma and Google Fonts network errors

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@ EMAIL_FROM="noreply@dreametrix.com"
 # NODE_ENV = 'development'
 NODE_ENV = 'production'
 
+# Use fallback Prisma client to avoid binary download issues
+USE_FALLBACK_PRISMA=true
+
 # Database
 DATABASE_URL="mysql://admin:jemasa%40hb@157.230.112.193:3306/radiantprepdb"
 
